--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "4.4.7"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "lodash": "^4.13.1",
     "node-uuid": "^1.4.7"
