--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "node": "4.4.7"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "lodash": "^4.13.1",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "wrap-api-client": "wrapmedia/api-client"
   },
   "devDependencies": {},
   "scripts": {
