--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "4.4.7"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
